--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ShopIST</string>
+    <string name="pantry">Pantry</string>
+    <string name="shopping">Shopping</string>
+    <string name="search_for_a_list">Search for a list…</string>
+    <string name="action_settings">Settings</string>
+    <string name="add_list">Add list</string>
 </resources>
