--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="search_for_a_list">Search for a list…</string>
     <string name="action_settings">Settings</string>
     <string name="add_list">Add list</string>
+    <string name="list_name">List Name</string>
+    <string name="description">Description</string>
+    <string name="category">Category</string>
+    <string name="create_ok">Create</string>
+    <string name="cancel">Cancel</string>
+    <string name="location">Location</string>
+    <string name="pick_location">Pick Location on map</string>
+    <string name="use_current_location">Use current location</string>
+    <string name="none">None</string>
+    <string name="create_list_dialog_title">Create new list</string>
+    <string name="choose_a_category_for_the_list">Choose a category for the list</string>
+    <string name="choose_a_location_option">Choose a location option</string>
 </resources>
