--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="create_list_dialog_title">Create new list</string>
     <string name="choose_a_category_for_the_list">Choose a category for the list</string>
     <string name="choose_a_location_option">Choose a location option</string>
+    <string name="create_list_error">You list must have a name and belong to a category</string>
+    <string name="create_new_list">Create new list</string>
+    <string name="insert_a_code">Insert a code</string>
+    <string name="scan_qr_code">Scan QR Code</string>
 </resources>
