--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="create_new_list">Create new list</string>
     <string name="insert_a_code">Insert a code</string>
     <string name="scan_qr_code">Scan QR Code</string>
+    <string name="list_options">List options</string>
 </resources>
