Pantry List Base and some main screen updates

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="list_options">List options</string>
     <string name="product_name">Product name</string>
     <string name="create_product">Create product</string>
+    <string name="delete_list">Delete list</string>
+    <string name="sync_with_server">Sync with server</string>
 </resources>
