--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="category">Category</string>
     <string name="create_ok">Create</string>
     <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
     <string name="location">Location</string>
     <string name="pick_location">Pick Location on map</string>
     <string name="use_current_location">Use current location</string>
@@ -28,4 +29,9 @@
     <string name="sync_with_server">Sync with server</string>
     <string name="insert_image">Insert image</string>
     <string name="total_wanted">Total wanted: </string>
+    <string name="delete_list_confirmation">Are you sure you want to delete this list?</string>
+    <string name="add_product">Add product</string>
+    <string name="add_products">Add products</string>
+    <string name="confirm">Confirm</string>
+    <string name="new_product">New product</string>
 </resources>
