Screen to add and/or create products done, need to implement multiselect to choose several items to add to the lists

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="add_products">Add products</string>
     <string name="confirm">Confirm</string>
     <string name="new_product">New product</string>
+    <string name="product_image">Product Image</string>
+    <string name="create_product_error">The product must have a name</string>
 </resources>
