--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="product">Product</string>
     <string name="product_details">Product Details</string>
     <string name="update">Update</string>
+    <string name="scan_product">Scan a product</string>
 </resources>
