--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="create_new_product">Create new product</string>
     <string name="scan_a_barcode">Scan a barcode</string>
     <string name="product_already_exists">That product already exists</string>
+    <string name="go_to_cart">Go to cart</string>
 </resources>
