Add syncing to server

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="product_desc">Product Description</string>
     <string name="create_product">Create product</string>
     <string name="delete_list">Delete list</string>
-    <string name="sync_with_server">Sync with server</string>
+    <string name="sync_with_server">Share</string>
     <string name="insert_image">Insert image</string>
     <string name="total_wanted">Total wanted</string>
     <string name="delete_list_confirmation">Are you sure you want to delete this list?</string>
