Add logic to get pantry from qr code

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="sync_icon">Syncronization icon</string>
     <string name="qr_code">QR Code</string>
     <string name="ok">Ok</string>
+    <string name="close">Close</string>
+    <string name="minutes">" minutes away"</string>
 </resources>
