--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="finish">finish</string>
     <string name="select_pantry">Select Pantry</string>
     <string name="choose_a_pantry">Choose a Pantry</string>
+    <string name="refresh_data">Refresh data</string>
 </resources>
