--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -104,5 +104,5 @@
     <string name="other_users_rated">Other users rated</string>
     <string name="queue_time_estimation">Queue Estimation Time</string>
     <string name="seconds">Seconds</string>
-    <string name="refresh_data">Refresh data</string>
+    <string name="refresh_data">Refresh</string>
 </resources>
